# bitgn-ecom1-exoskeleton

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  agent.py  agent_original.py  answer_formatter.py  archive_fraud.py  catalog_tools.py  checkout_preflight.py  config.py  dispatch_planner.py  doc_autocite.py  evidence_ledger.py  fraud_rules.py  main.py  manager_verification.py  payment_fraud.py  payment_recovery.py  payment_recovery_review.py  pyproject.toml  receipt_price.py  refund_preflight.py  runtime_calls.py  runtime_mutation_guard.py  runtime_state.py  security_preflight.py  staff_tools.py  submission_refs.py  task_classifier.py  tmp_cleanup.py
articles/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_RU.md  NO_ARCHITECTURE.md  NO_ARCHITECTURE_OPEN_MODELS_RESEARCH.md  OPEN_MODELS_RESEARCH.md  OPEN_MODELS_RESEARCH_RU.md  README-thermal-dgx-spark.md
articles/diagrams/: mermaidConfig.json  puppeteerConfig.json  render.sh
articles/runs/: run_20260617_090206.json  run_20260617_120326.json  run_20260617_125231.json  run_20260617_141049.json  run_20260617_164558.json  run_20260617_170437.json  run_20260617_175948.json  run_20260617_191628.json  run_20260617_191819.json  run_20260617_192940.json  (+39 more)
prompts/: answer_formatter.j2  catalog_parser.j2  main.j2  payment_recovery_review.j2  system.j2  task_classifier.j2
scripts/: backfill_run_outputs.py  generate_runs_report.py  langsmith_trace_report.py  render_research_charts.py
tests/: test_agent.py  test_answer_formatter.py  test_answer_formatter_llm.py  test_archive_fraud.py  test_catalog_tools.py  test_checkout_preflight.py  test_config.py  test_dispatch_planner.py  test_doc_autocite.py  test_evidence_ledger.py  test_main.py  test_manager_verification.py  test_payment_fraud.py  test_payment_recovery.py  test_payment_recovery_review.py  test_receipt_price.py  test_refund_preflight.py  test_runtime_calls.py  test_runtime_mutation_guard.py  test_security_preflight.py  test_staff_tools.py  test_submission_refs.py  test_task_classifier.py  test_tmp_cleanup.py
(+13 files in other folders)
